Adapt tests Signed-off-by: Hugo Marcellin <hugo.marcelin@rte-france.com>